# Manrododex

./: .gitignore  README.md  manrododex.py  setup.cfg  tox.ini
.github/workflows/: CI.yml
docs/: conf.py  index.rst
docs/manual/: automating.rst  compatibility.rst
manrododex/: __main__.py  apiadapter.py  chapters.py  downloader.py  exceptions.py  http.py  logger.py  main.py  manga.py  manga_helpers.py  system_helper.py  test.py
manrododex/CLI/: argparse.py  downloading_args.py  general_args.py  required_args.py
tests/: __init__.py  lang_codes.py  test_downloader_img_ext.py  test_downloader_img_name.py  test_downloading_args.py  test_main.py  test_manga_gen_list.py  test_manga_uuid.py  test_manga_uuid_name.py
