[metadata]
name = manrododex
url = https://github.com/Sydiepus/Manrododex
license = MIT
license_files = LICENSE
description = A manga downloader for mangadex
author = Charbel Assaad
author_email = sydiepus@gmail.com
keywords =
 mangadex
 manga
 downloader
classifiers =
 Development Status :: 4 - Beta
 Environment :: Console
 Intended Audience :: End Users/Desktop
 License :: OSI Approved :: MIT License
 Natural Language :: English
 Operating System :: OS Independent
 Programming Language :: Python :: 3 :: Only
 Topic :: Internet :: WWW/HTTP

[options]
packages = find:

[options.entry_points]
console_scripts =
    manrododex = manrododex.__main__:cli_handler

[options.packages.find]
exclude = tests*
